--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -574,7 +574,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:gravity="center"
-        android:text="VCC\nON"
+        android:text="@string/vcc_on"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/clip_blue"
