--- a/app/src/main/res/layout/popup_vcc_funcay_cms.xml
+++ b/app/src/main/res/layout/popup_vcc_funcay_cms.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/popup_background_lbs"
+        android:background="@drawable/popup_background_cms"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,19 +16,17 @@
 
         <!-- Popup Title -->
 
-        <!-- Species Spinner -->
-
         <TextView
             android:id="@+id/txtVccPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@color/lt_brown"
             android:gravity="center"
-            android:background="@color/clip_blue"
+            android:paddingHorizontal="15dp"
             android:paddingVertical="5dp"
-            android:paddingHorizontal="10dp"
-            android:text="@string/vcc_tournament_lbs"
-            android:textColor="@color/clip_white"
+            android:text="Voice Control\nFun-Day Cms"
+            android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold" />
 
@@ -42,34 +40,24 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginEnd="30dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginEnd="30dp"
                 android:text="@string/species"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/clip_color"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+
 
         </LinearLayout>
 
+
+        <!-- Species & Clip_Color Spinners -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +68,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <Spinner
-                android:id="@+id/spinnerSpeciesVCCLbs"
+                android:id="@+id/spinnerSpeciesVCCCmsFD"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="30dp"
@@ -90,22 +78,13 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinnerClipColorVCCLbs"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
 
-        <!-- Weight Input (Lbs/Ozs) -->
+        <!-- Length Input (Cms) -->
 
         <LinearLayout
-            android:id="@+id/layoutWeightLbsOzs"
+            android:id="@+id/layoutLengthCms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -116,8 +95,8 @@
             app:layout_constraintStart_toStartOf="parent" >
 
             <Spinner
-                android:id="@+id/spinnerLbsTens"
-                android:layout_width="70dp"
+                android:id="@+id/spinnerCmsTensFD"
+                android:layout_width="60dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="2dp"
                 android:background="@color/lite_grey"
@@ -127,8 +106,8 @@
                 android:textStyle="bold"/>
 
             <Spinner
-                android:id="@+id/spinnerLbsOnes"
-                android:layout_width="70dp"
+                android:id="@+id/spinnerCmsOnesFD"
+                android:layout_width="60dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="2dp"
                 android:background="@color/lite_grey"
@@ -138,35 +117,47 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/txtLbsPlaceHolder"
+                android:id="@+id/txtCmsPlaceHolder"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
+                android:layout_marginTop="15dp"
                 android:gravity="bottom"
-                android:text="@string/lbs"
+                android:text="@string/dot"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"     />
+                android:textSize="60sp"
+                android:textStyle="bold"    />
 
             <Spinner
-                android:id="@+id/spinnerOunces"
-                android:layout_width="70dp"
+                android:id="@+id/spinnerCmsTenthsFD"
+                android:layout_width="60dp"
                 android:layout_height="50dp"
+                android:layout_marginEnd="2dp"
                 android:background="@color/lite_grey"
                 android:spinnerMode="dialog"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/txtOzsPlaceHolder"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="bottom"
-                android:text="@string/ozs"
+            <Spinner
+                android:id="@+id/spinnerCmsHundredsFD"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:background="@color/lite_grey"
+                android:spinnerMode="dialog"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"     />
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtCmsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:scaleY="1.75"
+                android:text="@string/cms"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"    />
 
 
         </LinearLayout>
@@ -180,11 +171,11 @@
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent" >
 
             <TextView
                 android:id="@+id/txtIfRequired"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -195,7 +186,6 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -231,5 +221,5 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
-            </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
