--- a/app/src/main/res/layout/popup_vcc_funday_lbs.xml
+++ b/app/src/main/res/layout/popup_vcc_funday_lbs.xml
@@ -27,7 +27,7 @@
             android:background="@color/clip_blue"
             android:paddingVertical="5dp"
             android:paddingHorizontal="10dp"
-            android:text="@string/vcc_tournament_lbs"
+            android:text="@string/voice_control_fun_day_lbs"
             android:textColor="@color/clip_white"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -55,18 +55,6 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/clip_color"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
 
         </LinearLayout>
 
@@ -80,7 +68,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <Spinner
-                android:id="@+id/spinnerSpeciesVCCLbs"
+                android:id="@+id/spinnerSpeciesVCCFDLbs"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="30dp"
@@ -90,15 +78,6 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinnerClipColorVCCLbs"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -116,7 +95,7 @@
             app:layout_constraintStart_toStartOf="parent" >
 
             <Spinner
-                android:id="@+id/spinnerLbsTens"
+                android:id="@+id/spinnerFDLbsTens"
                 android:layout_width="70dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="2dp"
@@ -127,7 +106,7 @@
                 android:textStyle="bold"/>
 
             <Spinner
-                android:id="@+id/spinnerLbsOnes"
+                android:id="@+id/spinnerFDLbsOnes"
                 android:layout_width="70dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="2dp"
@@ -149,7 +128,7 @@
                 android:textStyle="bold"     />
 
             <Spinner
-                android:id="@+id/spinnerOunces"
+                android:id="@+id/spinnerFDOunces"
                 android:layout_width="70dp"
                 android:layout_height="50dp"
                 android:background="@color/lite_grey"
@@ -231,5 +210,5 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
-            </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
