--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,6 +59,7 @@
     <color name="Log_green_secondary">#806EA603</color>
     <color name="Log_white">#85FDFDFD</color>
     <color name="Log_orange">#80FE671E</color>
+    <color name="Log_brown">#805E3A29</color>
 
     <!-- Light green -->
 
