--- a/app/src/main/res/layout/activity_look_up_share_data.xml
+++ b/app/src/main/res/layout/activity_look_up_share_data.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imgShare"
             android:layout_width="wrap_content"
-            android:layout_height="250dp"
+            android:layout_height="175dp"
             android:contentDescription="@string/app_image_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,12 +46,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.50"
+            android:contentDescription="@string/catch_and_call_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgShare"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/google_map_icon"
-            android:contentDescription="@string/catch_and_call_logo"/>
+            app:layout_constraintVertical_bias="0.53"
+            app:srcCompat="@drawable/google_map_icon" />
 
         <View
             android:id="@+id/divShare"
@@ -95,6 +97,47 @@
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtShareLogs" />
+        <View
+            android:id="@+id/divShare01"
+            android:layout_width="0dp"
+            android:layout_height="5dp"
+            android:layout_marginVertical="5dp"
+            android:background="@color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnShareLogs" />
+
+        <TextView
+            android:id="@+id/txtListCatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@color/very_lite_grey"
+            android:text="View a List of Your Catch Logs"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divShare01"/>
+
+        <Button
+            android:id="@+id/btnListCatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/btn_outline_green"
+            android:gravity="center"
+            android:paddingHorizontal="15dp"
+            android:text="@string/list_of_your_catch"
+            android:textColor="@color/clip_blue"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtListCatch" />
 
         <View
             android:id="@+id/divShare1"
@@ -105,7 +148,7 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnShareLogs" />
+            app:layout_constraintTop_toBottomOf="@id/btnListCatch" />
 
         <TextView
             android:id="@+id/txtGoogleMap"
